--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -47,6 +47,8 @@
  <!--    <color name="dark_grey_cloud_drive">#6d6f70</color>--> 
     
     <color name="green_free_account">#31B404</color>
+
+    <color name="divider_upgrade_account">#1F000000</color>
      
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
