--- a/app/src/main/res/layout-v21/nav_header.xml
+++ b/app/src/main/res/layout-v21/nav_header.xml
@@ -14,31 +14,30 @@
 		android:id="@+id/navigation_drawer_account_section"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:paddingBottom="8dp"
+		android:paddingBottom="16dp"
 		android:paddingEnd="16dp"
 		android:paddingLeft="16dp"
 		android:paddingRight="16dp"
-		android:paddingStart="16dp">
+		android:paddingTop="44dp">
 		
         <RelativeLayout 
 	        android:id="@+id/navigation_drawer_user_account_relative_layout_profile_avatar"
-	        android:layout_width="64dp"
-			android:layout_height="64dp"
+	        android:layout_width="48dp"
+			android:layout_height="48dp"
 			android:layout_alignParentLeft="true"
-			android:layout_alignParentTop="true"
-			android:layout_marginTop="30dp">
+			android:layout_alignParentTop="true">
 	        
 	        <mega.privacy.android.app.components.RoundedImageView 
 				android:id="@+id/navigation_drawer_user_account_picture_profile"
-				android:layout_width="64dp"
-				android:layout_height="64dp"
+				android:layout_width="48dp"
+				android:layout_height="48dp"
 				android:scaleType="fitCenter"
-				rounded:corner_radius="64dp" />
+				rounded:corner_radius="48dp" />
 		    
 		    <TextView
 		        android:id="@+id/navigation_drawer_user_account_picture_profile_textview"
-		        android:layout_width="64dp"
-			    android:layout_height="64dp"
+		        android:layout_width="48dp"
+			    android:layout_height="48dp"
 				android:paddingBottom="5dp" 
 			    android:layout_centerInParent="true"
 			    android:gravity="center_horizontal|center_vertical" />
@@ -48,26 +47,30 @@
 	    <LinearLayout
 		    android:id="@+id/navigation_drawer_account_information"
 		    android:layout_width="wrap_content"
-		    android:layout_height="56dp"
+		    android:layout_height="48dp"
 		    android:layout_alignParentTop="true"
 		    android:layout_toRightOf="@id/navigation_drawer_user_account_relative_layout_profile_avatar"
 		    android:gravity="center_vertical"
 		    android:orientation="vertical"
-		    android:layout_marginTop="30dp"
 		    android:layout_marginLeft="10dp">
 		    
 	        <TextView
 		        android:id="@+id/navigation_drawer_account_information_display_name"
-		        style="@style/NavDrawerAccountInfoText"
+		        android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:textSize="14sp"
+				android:textColor="#ffffff"
 		        android:text="User Name"
-		        android:textStyle="bold"
 		        android:singleLine="true"
 		        android:ellipsize="end"
-		        tools:fontFamily="sans-serif-medium"/>
+		        tools:fontFamily="sans-serif"/>
 	        
 	        <TextView
 		        android:id="@+id/navigation_drawer_account_information_email"
-		        style="@style/NavDrawerAccountInfoText"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:textSize="14sp"
+				android:textColor="#b3ffffff"
 		        android:text="email@domain.com"
 		        android:singleLine="true"
 		        android:ellipsize="end"
