Task #5042 - Payment pages

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -77,4 +77,6 @@
 
 	<color name="tour_bar_grey">#dddddd</color>
 	<color name="tour_bar_red">#cc0000</color>
+
+    <color name="small_letter_upgrade_account">#8a333333</color>
 </resources>
