--- a/app/src/main/res/layout-v21/activity_main_contact_properties.xml
+++ b/app/src/main/res/layout-v21/activity_main_contact_properties.xml
@@ -2,13 +2,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/contact_properties_main_activity_layout"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_main_contact_properties"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        tools:context=".ContactPropertiesActivityLollipop" />
 
     <FrameLayout
         android:id="@+id/fragment_container_contact_properties"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar_main_contact_properties"/>
 
 </RelativeLayout>
 
