--- a/app/src/main/res/layout-v21/fragment_contact_file_list.xml
+++ b/app/src/main/res/layout-v21/fragment_contact_file_list.xml
@@ -2,37 +2,23 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:rounded="http://schemas.android.com/apk/res-auto"
     android:id="@+id/contact_file_list"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/white" >
 
     <RelativeLayout
         android:id="@+id/contact_file_list_contact_layout"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/file_list_selected_row" >
-        
-        <RelativeLayout
-	           android:id="@+id/contact_file_list_toolbar_back_options_layout"
-	           android:layout_width="match_parent"
-	           android:layout_height="56dp" >
-	        <ImageView 
-		        android:id="@+id/contact_file_list_toolbar_back"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:src="@drawable/ic_arrow_back_white"
-		        android:layout_alignParentLeft="true"
-		        android:layout_centerVertical="true"
-		        style="@style/dialogActionButton" />
-	    </RelativeLayout>
+
 
         <RelativeLayout
             android:id="@+id/contact_file_list_relative_layout_avatar"
             android:layout_width="54dp"
             android:layout_height="54dp"
             android:layout_marginLeft="5dp"
-            android:paddingTop="3dp" 
-            android:layout_below="@id/contact_file_list_toolbar_back_options_layout" >
+            android:paddingTop="3dp">
 
             <mega.privacy.android.app.components.RoundedImageView
                 android:id="@+id/contact_file_list_thumbnail"
@@ -45,8 +31,8 @@
 
             <TextView
                 android:id="@+id/contact_file_list_initial_letter"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_centerInParent="true"
                 android:gravity="center_horizontal|center_vertical" />
         </RelativeLayout>
@@ -57,8 +43,7 @@
             android:layout_height="30dp"
             android:layout_toRightOf="@id/contact_file_list_relative_layout_avatar"
             android:paddingLeft="5dp"
-            android:paddingTop="7dp" 
-            android:layout_below="@id/contact_file_list_toolbar_back_options_layout" />
+            android:paddingTop="7dp" />
  
         <TextView
             android:id="@+id/contact_file_list_content"
