--- a/app/src/main/res/layout-v21/available_payment_methods.xml
+++ b/app/src/main/res/layout-v21/available_payment_methods.xml
@@ -19,9 +19,7 @@
             android:textAllCaps="true"
             android:textSize="16sp"
             android:textColor="@color/lollipop_primary_color"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="22dp"
-            android:layout_marginBottom="18dp"/>
+            android:layout_centerHorizontal="true"/>
 
     </RelativeLayout>
 
@@ -35,10 +33,7 @@
             android:id="@+id/payment_method_google_wallet_icon"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/google_wallet_ic"
-            android:layout_marginLeft="16dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"/>
+            android:src="@drawable/google_wallet_ic"/>
 
         <TextView
             android:id="@+id/payment_method_google_wallet_text"
@@ -47,8 +42,7 @@
             android:textSize="17sp"
             android:text="@string/payment_method_google_wallet"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/payment_method_google_wallet_icon"
-            android:layout_marginLeft="16dp"/>
+            android:layout_toRightOf="@id/payment_method_google_wallet_icon"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -87,10 +81,7 @@
             android:id="@+id/payment_method_fortumo_icon"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/fortumo_ic"
-            android:layout_marginLeft="16dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"/>
+            android:src="@drawable/fortumo_ic"/>
 
         <TextView
             android:id="@+id/payment_method_fortumo_text"
@@ -99,8 +90,7 @@
             android:textSize="17sp"
             android:text="@string/payment_method_fortumo"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/payment_method_fortumo_icon"
-            android:layout_marginLeft="16dp"/>
+            android:layout_toRightOf="@id/payment_method_fortumo_icon"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -132,8 +122,7 @@
     <RelativeLayout
         android:id="@+id/close_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/close_layout_icon"
