--- a/app/src/main/res/layout-v21/fragment_my_account.xml
+++ b/app/src/main/res/layout-v21/fragment_my_account.xml
@@ -254,7 +254,7 @@
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:src="@drawable/ic_email_grey"
-					android:visibility="invisible" />
+					android:visibility="gone" />
 			</LinearLayout>
 
 			<LinearLayout
