--- a/app/src/main/res/layout-v21/activity_manager.xml
+++ b/app/src/main/res/layout-v21/activity_manager.xml
@@ -81,6 +81,29 @@
                         android:layout_weight="1" />
             </LinearLayout>
 
+            <!-- THE CHAT TABS -->
+            <LinearLayout
+                android:id="@+id/tabhost_chat"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@id/toolbar"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <android.support.design.widget.TabLayout
+                    android:id="@+id/sliding_tabs_chat"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/mega"
+                    style="@style/MyCustomTabLayout"/>
+
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/chat_tabs_pager"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+            </LinearLayout>
+
             <!-- THE SHARES TABS -->
             <LinearLayout
                 android:id="@+id/tabhost_shares"
