--- a/app/src/main/res/menu-v21/activity_manager.xml
+++ b/app/src/main/res/menu-v21/activity_manager.xml
@@ -218,4 +218,12 @@
 		android:title="@string/action_logout"
 		android:icon="@drawable/ic_action_bar_null"
 		MEGA:showAsAction="never" />
+
+	<item
+		android:id="@+id/action_menu_new_chat"
+		android:orderInCategory="180"
+		android:showAsAction="never"
+		android:title="@string/action_new_chat"
+		android:icon="@drawable/ic_action_bar_null"
+		MEGA:showAsAction="never" />
 </menu>
