--- a/app/src/main/res/layout-v21/activity_manager.xml
+++ b/app/src/main/res/layout-v21/activity_manager.xml
@@ -127,7 +127,6 @@
                         android:layout_weight="1" />
             </LinearLayout>
 
-
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/floating_button"
                 android:layout_width="@dimen/fab_button_diameter"
@@ -139,7 +138,6 @@
                 android:stateListAnimator="@anim/button_elevation"
                 android:tint="@android:color/white"
                 android:layout_gravity="bottom|right|end"/>
-
 
         </android.support.design.widget.CoordinatorLayout>
 
@@ -159,6 +157,67 @@
             layout="@layout/layout_get_pro_account"
             android:visibility="gone" />
     </RelativeLayout>
+
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fab_collection_layout"
+        android:background="@color/transparent_white"
+        android:gravity="bottom|end"
+        android:visibility="gone"
+        android:fitsSystemWindows="true">
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/third_fab_chat"
+                android:layout_width="@dimen/fab_button_diameter"
+                android:layout_height="@dimen/fab_button_diameter"
+                android:layout_marginBottom="200dp"
+                android:layout_gravity="bottom|end"
+                android:layout_marginRight="16dp"
+                android:visibility="invisible"
+                app:backgroundTint="@color/orange"
+                app:elevation="6dp"
+                app:pressedTranslationZ="12dp"
+                android:src="@drawable/ic_add_white" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/second_fab_chat"
+                android:layout_width="@dimen/fab_button_diameter"
+                android:layout_height="@dimen/fab_button_diameter"
+                android:layout_marginBottom="140dp"
+                android:layout_gravity="bottom|end"
+                android:layout_marginRight="16dp"
+                android:visibility="invisible"
+                app:backgroundTint="@color/orange"
+                app:elevation="6dp"
+                app:pressedTranslationZ="12dp"
+                android:src="@drawable/ic_add_white" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/first_fab_chat"
+                android:layout_width="@dimen/fab_button_diameter"
+                android:layout_height="@dimen/fab_button_diameter"
+                android:layout_marginBottom="80dp"
+                android:layout_gravity="bottom|end"
+                android:layout_marginRight="16dp"
+                android:visibility="invisible"
+                app:elevation="6dp"
+                app:backgroundTint="@color/accentColor"
+                app:pressedTranslationZ="12dp"
+                android:src="@drawable/ic_chat_white" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/main_fab_chat"
+                android:layout_width="@dimen/fab_button_diameter"
+                android:layout_height="@dimen/fab_button_diameter"
+                android:layout_gravity="bottom|end"
+                app:elevation="6dp"
+                app:backgroundTint="@color/accentColor"
+                app:pressedTranslationZ="12dp"
+                android:layout_margin="16dp"
+                android:src="@drawable/ic_add_white" />
+
+    </android.support.design.widget.CoordinatorLayout>
 
     <include
         android:layout_width="fill_parent"
