--- a/app/src/main/res/layout-v21/item_recent_chat_list.xml
+++ b/app/src/main/res/layout-v21/item_recent_chat_list.xml
@@ -2,7 +2,7 @@
     xmlns:rounded="http://schemas.android.com/apk/res-auto"
     android:id="@+id/recent_chat_list_item_layout"
     android:layout_width="fill_parent"
-    android:layout_height="72dp"
+    android:layout_height="100dp"
     android:descendantFocusability="blocksDescendants" >
 
     <RelativeLayout
@@ -50,7 +50,21 @@
         android:layout_below="@id/recent_chat_list_name"
         android:layout_toRightOf="@id/recent_chat_list_relative_layout_avatar"
         android:layout_marginLeft="13dp"
+        android:layout_marginRight="30dp"
         android:textSize="14sp"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:minLines="2"
+        android:textColor="@color/accentColor" />
+
+    <TextView
+        android:id="@+id/recent_chat_list_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/recent_chat_list_content"
+        android:layout_toRightOf="@id/recent_chat_list_relative_layout_avatar"
+        android:layout_marginLeft="13dp"
+        android:textSize="12sp"
         android:ellipsize="end"
         android:maxLines="1"
         android:textColor="@color/file_list_second_row" />
