--- a/app/src/main/res/layout-v21/item_recent_chat_list.xml
+++ b/app/src/main/res/layout-v21/item_recent_chat_list.xml
@@ -29,6 +29,17 @@
             android:layout_centerInParent="true"
             android:gravity="center_horizontal|center_vertical"
             android:paddingBottom="3dp" />
+
+        <ImageView
+            android:id="@+id/recent_chat_list_multiselect_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center_horizontal|center_vertical"
+            android:background="@null"
+            android:src="@drawable/ic_check_white"
+            android:visibility="gone"/>
+
     </RelativeLayout>
 
     <ImageView
