--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -31,19 +31,22 @@
         <RelativeLayout
             android:id="@+id/writing_linear_layout_chat"
             android:layout_width="match_parent"
+            android:focusableInTouchMode="true"
             android:layout_height="wrap_content">
 
             <ImageButton
                 android:id="@+id/keyboard_icon_chat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_emoticon_grey" />
+                android:src="@drawable/ic_emoticon_grey"
+                android:layout_marginLeft="16dp"/>
 
             <ImageButton
                 android:id="@+id/send_message_icon_chat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
+                android:layout_marginRight="16dp"
                 android:src="@drawable/ic_send_black" />
 
             <EditText
@@ -52,6 +55,10 @@
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 android:layout_toRightOf="@+id/keyboard_icon_chat"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
                 android:layout_centerVertical="true"
                 android:textSize="14sp"
                 android:layout_toLeftOf="@+id/send_message_icon_chat"/>
@@ -71,37 +78,20 @@
         android:orientation="vertical">
 
         <ScrollView
+            android:id="@+id/message_scroll_view_chat_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <RelativeLayout
+                android:id="@+id/invite_relative_chat_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:id="@+id/invite_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/invite_Lara_chat"
-                    android:textColor="@color/chat_empty_text_color"
-                    android:textSize="16sp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginLeft="56dp"
-                    android:layout_marginRight="56dp"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/invite_Lara_chat"
-                    android:textColor="@color/chat_empty_text_color"
-                    android:textSize="16sp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginLeft="56dp"
-                    android:layout_marginRight="56dp"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/invite_Lara_chat"
-                    android:textColor="@color/chat_empty_text_color"
+                    android:textColor="@color/mail_my_account"
                     android:textSize="16sp"
                     android:layout_marginTop="5dp"
                     android:layout_marginLeft="56dp"
