--- a/app/src/main/res/layout-v21/activity_file_contact_list.xml
+++ b/app/src/main/res/layout-v21/activity_file_contact_list.xml
@@ -20,36 +20,43 @@
     <RelativeLayout
         android:id="@+id/file_contact_list_layout"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="72dp"
         android:layout_below="@id/toolbar_file_contact_list"
         android:background="@color/file_list_selected_row" >
 
         <ImageView
             android:id="@+id/file_properties_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="54dp"
-            android:layout_marginLeft="14dp"
-            android:paddingTop="5dp" />
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:scaleType="fitCenter"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="14dp"/>
 
         <TextView
             android:id="@+id/node_name"
-            android:layout_width="225dp"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_toRightOf="@id/file_properties_icon"
-            android:paddingLeft="5dp"
-            android:paddingTop="7dp"
-            android:singleLine="false" />
+            android:layout_marginTop="14dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="24dp"
+            android:textColor="@color/file_list_first_row"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:singleLine="false"
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/node_last_update"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
             android:layout_below="@id/node_name"
             android:layout_toRightOf="@id/file_properties_icon"
-            android:paddingBottom="7dp"
-            android:paddingLeft="5dp"
+            android:layout_marginLeft="8dp"
             android:textColor="@color/file_list_second_row"
-            android:textSize="12sp" />
+            android:textSize="14sp"
+            android:ellipsize="end"
+            android:maxLines="1"/>
     </RelativeLayout>
 
     <RelativeLayout
